# tg-ws-proxy-C

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
include/: crash_handler.h  main.h  mem.h  mtproto.h  mtproto_transport.h  secret.h
src/: crash_handler.c  main.c  mem.c  mtproto.c  mtproto_transport.c  secret.c
